[pylama]
linters = mccabe,pep257,pep8,pyflakes,import_order
ignore = D203

[pylama:pep8]
max_line_length = 100

[pytest]
addopts = --cov=napalm-ruckus-fastiron --cov-report term-missing -vs --pylama
json_report = report.json
jsonapi = true

[coverage:run]
include =
  napalm_skeleton/*

[metadata]
  description-file = README.md
